Colors made brighter.

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -8,15 +8,15 @@
 
 // Language colors -----------------------------------
 
-// Uno hue
+
 @uno-1: hsl(@syntax-uno, 76%, 10%);
-@uno-2: hsl(@syntax-uno, 58%, 34%);
-@uno-3: hsl(@syntax-uno, 34%, 54%);
-@uno-4: hsl(@syntax-uno, 16%, 66%);
+@uno-2: spin(hsl(@syntax-uno, 62%, 24%), 3);
+@uno-3: hsl(@syntax-uno, 55%, 44%);
+@uno-4: hsl(@syntax-uno, 25%, 66%);
 
 // Duo hue
-@duo-1: hsl(@syntax-duo, 92%, 28%);
-@duo-2: hsl(@syntax-duo, 46%, 62%);
+@duo-1: spin(hsl(@syntax-duo, 100%, 28%), 10);
+@duo-2: hsl(@syntax-duo, 66%, 52%);
 @duo-3: hsl(@syntax-duo,  6%, 70%);
 
 
