--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,5 +1,5 @@
 
-// DuoTone light
+// DuoTone bright sea
 
 // Hues -----------------------------------
 @syntax-uno:    212;
@@ -8,7 +8,7 @@
 
 // Language colors -----------------------------------
 
-
+// Uno hue
 @uno-1: hsl(@syntax-uno, 76%, 10%);
 @uno-2: spin(hsl(@syntax-uno, 62%, 24%), 3);
 @uno-3: hsl(@syntax-uno, 55%, 44%);
