One UI theme integration added.

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -25,3 +25,6 @@
 @syntax-bg:     hsl(@syntax-uno, 33%, 100%);
 @syntax-guide:  darken(@syntax-bg, 10%);
 @syntax-accent: hsl(@syntax-duo, 90%, 40%);
+
+// One UI theme colors --------------------------
+@ui-hue: @syntax-duo;
