One UI theme integration added.

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -28,3 +28,6 @@
 @syntax-selection:        darken(@syntax-bg, 12%);
 @syntax-selection-gutter: darken(@syntax-bg, 3%);
 @syntax-cursor-line:      fade(@syntax-selection, 26%); // needs to be semi-transparent to show serach results
+
+// One UI theme colors --------------------------
+@ui-hue: @syntax-duo;
