--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,5 +1,5 @@
 
-// DuoTone dark Sea
+// DuoTone stark Sea
 
 // Hues -----------------------------------
 @syntax-uno: 212;
@@ -10,21 +10,21 @@
 
 // Uno hue
 @uno-1: hsl(@syntax-uno, 99%, 92%);
-@uno-2: hsl(@syntax-uno, 66%, 72%);
-@uno-3: hsl(@syntax-uno, 44%, 56%);
-@uno-4: hsl(@syntax-uno, 22%, 44%);
+@uno-2: hsl(@syntax-uno, 88%, 77%);
+@uno-3: hsl(@syntax-uno, 24%, 54%);
+@uno-4: hsl(@syntax-uno, 12%, 38%);
 @uno-5: hsl(@syntax-uno, 11%, 30%);
 
 // Duo hue
-@duo-1: hsl(@syntax-duo, 99%, 60%);
-@duo-2: hsl(@syntax-duo, 55%, 44%);
-@duo-3: hsl(@syntax-duo, 22%, 33%);
+@duo-1: hsl(@syntax-duo, 79%, 70%);
+@duo-2: hsl(@syntax-duo, 52%, 48%);
+@duo-3: hsl(@syntax-duo, 6%, 32%);
 
 
 // Base colors -----------------------------------
 @syntax-fg:               @uno-2;
-@syntax-bg:               hsl(@syntax-uno, 24%, 15%);
-@syntax-accent:           hsl(@syntax-duo, 100%, 66%);
+@syntax-bg:               hsl(@syntax-uno, 0%, 15%);
+@syntax-accent:           hsl(@syntax-duo, 95%, 66%);
 @syntax-guide:            lighten(@syntax-bg, 10%);
 @syntax-selection:        lighten(@syntax-bg, 12%);
 @syntax-selection-gutter: lighten(@syntax-bg, 3%);
