Added One-UI accent color.

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -29,3 +29,6 @@
 @syntax-selection:        lighten(@syntax-bg, 12%);
 @syntax-selection-gutter: lighten(@syntax-bg, 3%);
 @syntax-cursor-line:      fade(@syntax-selection, 26%); // needs to be semi-transparent to show serach results
+
+// One UI theme colors --------------------------
+@ui-hue: @syntax-duo;
