--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,33 +1,32 @@
 
-// DuoTone stark Sea
+// DuoTone bright sea
 
 // Hues -----------------------------------
-@syntax-uno: 212;
-@syntax-duo: 160;
+@syntax-uno:    212;
+@syntax-duo:    160;
 
 
 // Language colors -----------------------------------
 
 // Uno hue
-@uno-1: hsl(@syntax-uno, 99%, 92%);
-@uno-2: hsl(@syntax-uno, 88%, 77%);
-@uno-3: hsl(@syntax-uno, 24%, 54%);
-@uno-4: hsl(@syntax-uno, 12%, 38%);
-@uno-5: hsl(@syntax-uno, 11%, 30%);
+@uno-1: hsl(@syntax-uno, 76%, 10%);
+@uno-2: spin(hsl(@syntax-uno, 62%, 24%), 3);
+@uno-3: hsl(@syntax-uno, 55%, 44%);
+@uno-4: hsl(@syntax-uno, 15%, 70%);
 
 // Duo hue
-@duo-1: hsl(@syntax-duo, 79%, 70%);
-@duo-2: hsl(@syntax-duo, 52%, 48%);
-@duo-3: hsl(@syntax-duo, 6%, 32%);
+@duo-1: spin(hsl(@syntax-duo, 100%, 28%), 10);
+@duo-2: hsl(@syntax-duo, 66%, 52%);
+@duo-3: hsl(@syntax-duo,  6%, 80%);
 
 
 // Base colors -----------------------------------
 @syntax-fg:               @uno-2;
-@syntax-bg:               hsl(@syntax-uno, 0%, 15%);
-@syntax-accent:           hsl(@syntax-duo, 95%, 66%);
-@syntax-guide:            lighten(@syntax-bg, 10%);
-@syntax-selection:        lighten(@syntax-bg, 12%);
-@syntax-selection-gutter: lighten(@syntax-bg, 3%);
+@syntax-bg:               hsl(@syntax-uno, 33%, 100%);
+@syntax-accent:           hsl(@syntax-duo, 90%, 40%);
+@syntax-guide:            darken(@syntax-bg, 10%);
+@syntax-selection:        darken(@syntax-bg, 12%);
+@syntax-selection-gutter: darken(@syntax-bg, 3%);
 @syntax-cursor-line:      fade(@syntax-selection, 26%); // needs to be semi-transparent to show serach results
 
 // One UI theme colors --------------------------
