--- a/styles/colors.less
+++ b/styles/colors.less
@@ -13,6 +13,7 @@
 @uno-2: spin(hsl(@syntax-uno, 62%, 24%), 3);
 @uno-3: hsl(@syntax-uno, 55%, 44%);
 @uno-4: hsl(@syntax-uno, 15%, 70%);
+@uno-5: hsl(@syntax-uno, 11%, 85%);
 
 // Duo hue
 @duo-1: spin(hsl(@syntax-duo, 100%, 28%), 10);
